优化任务管理页面UI，支持任务列表展开查看
重构 Converter 文件组织结构，将所有转换器移至 Helpers/Converters 目录。
新增 NullToVisibilityConverter 和 InverseNullToVisibilityConverter 。
增强 UserTaskQueue 模型，添加任务列表展开/收起功能和当前查看状态管理。
优化 TaskManagerPage 界面，任务统计卡片支持点击展开查看详细任务列表。

--- a/Views/Pages/FileManagerPage.xaml
+++ b/Views/Pages/FileManagerPage.xaml
@@ -8,7 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:graph="clr-namespace:Microsoft.Graph.Models;assembly=Microsoft.Graph"
-    xmlns:helpers="clr-namespace:OneDesk.Helpers"
+    xmlns:converters="clr-namespace:OneDesk.Helpers.Converters"
     Title="FileManagerPage"
     d:DataContext="{d:DesignInstance local:FileManagerPage,
                                      IsDesignTimeCreatable=False}"
@@ -20,7 +20,7 @@
     mc:Ignorable="d">
 
     <Page.Resources>
-        <helpers:FileSizeConverter x:Key="FileSizeConverter" />
+        <converters:FileSizeConverter x:Key="FileSizeConverter" />
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Page.Resources>
 
